# Cursed-Coddy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: main.rs
src/cli/: banner.rs  colors.rs  commands.rs  mod.rs
src/config/: curriculum.rs  difficulties.rs  languages.rs  lesson_types.rs  mod.rs  ruleset.rs
src/execution/: cpp_runner.rs  executor.rs  file_manager.rs  js_runner.rs  mod.rs  rust_runner.rs
src/lessons/: human_lessons.rs  journey.rs  lesson_manager.rs  mod.rs
src/ollama/: formatter.rs  generator.rs  mod.rs  ruleset.rs
src/progress/: tracker.rs
