[package]
name = "cursed-coddy"
version = "0.1.0"
edition = "2021"
description = "A CLI-based coding education platform similar to Codecademy and Coddy"
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/Cursed-Coddy"

[[bin]]
name = "cursed-coddy"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
colored = "2.1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
rand = "0.8"
